--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.8.19",
-    "discord.js": "^11.6.2",
+    "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
-    "robotjs": "^0.6.0",
-    "minimist": ">=1.2.2"
-  }
+    "jest": "^25.1.0",
+    "minimist": "^1.2.5",
+    "robotjs": "^0.6.0"
+  },
+  "devDependencies": {}
 }
